# rhythme

./: Cargo.toml
assets/music/: test.txt
assets/music/PUPA/: PUPA copy.txt  PUPA.txt
src/: audio.rs  main.rs  notes.rs  screens.rs  select_menu.rs  state.rs
