[package]
name = "rhythme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7"
default-features = false

features = [
  "animation",
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
]

[dependencies.bevy_kira_audio]
version = "0.10.0"
default-features = false
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies]
bevy_egui = "0.14"
bevy-inspector-egui = "0.11.0"
bevy_framepace = "0.4.0"
tracing-wasm = "0.2"

[workspace]
resolver = "2"

#[target.wasm32-unknown-unknown]
#runner = "wasm-server-runner"
