[package]
name = "rhythme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7"
default-features = false

features = [
  "animation",
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
]

[dependencies.bevy_kira_audio]
version = "0.10.0"
default-features = false
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies]
bevy_egui = "0.14"
bevy-inspector-egui = "0.11.0"
bevy_framepace = "0.4.0"
tracing-wasm = "0.2"
bevy-debug-text-overlay = "2.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#[target.wasm32-unknown-unknown]
#runner = "wasm-server-runner"
