[package]
name = "rhythme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.8"
default-features = false

features = [
  "animation",
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
  "bevy_asset",
  "bevy_scene",
]

[dependencies.bevy_kira_audio]
version = "0.11.0"
default-features = false
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies]
bevy-inspector-egui = "0.12.0"
bevy_framepace = "0.5.0"
#bevy-debug-text-overlay = "3.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1